# libfixedlame

./: .gitignore  Makefile.am  autogen.sh  configure.ac  fixedlame.pc.in
debian/: changelog  control  libfixedlame-sox.install  rules
src/: Makefile.am
src/fixedlame/: Makefile.am  api.c  codeclib.h  codecs.h  fixedlame.h  fixedlame_private.h  general.c  metadata.h  mp3_enc.c  settings.h  system.h
src/sox/: Makefile.am  plugin.c  sox_mp3_plugin.h
